# trusted-signing-cli

./: Cargo.toml  LICENSE.md  README.md  READMe.md
.github/workflows/: build.yml
src/: main.rs
