[package]
name = "trusted-signing-cli"
version = "0.2.0"
edition = "2021"
description = "A simple CLI tool to sign files with Trusted Signing"
license = "MIT"
repository = "https://github.com/levminer/trusted-signing-cli"
keywords = ["azure", "codesigning", "signtool", "trusted-signing"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
dialoguer = "0.11.0"
directories = "5.0.1"
duct = "0.13.7"
tokio = "1.37.0"
trauma = "2.2.4"
zip = "0.6"
zip-extensions = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
