[package]
name = "trusted-signing-cli"
version = "0.6.0"
edition = "2021"
description = "A simple CLI tool to sign files with Trusted Signing"
license = "MIT"
repository = "https://github.com/levminer/trusted-signing-cli"
keywords = ["azure", "codesigning", "signtool", "trusted-signing"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
dialoguer = "0.11.0"
directories = "6.0.0"
duct = "1.0.0"
tokio = "1.37.0"
trauma = "2.2.4"
zip = "2.6.1"
zip-extensions = "0.8.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
